# titan-stockMaster

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: websocket.py
backend/app/api/v1/: __init__.py  auth.py  events.py  explain.py  ipos.py  leads.py  market.py  opportunities.py  portfolio.py  predictions.py  risk.py  search.py  smart_money.py  stakeholders.py
backend/app/domain/interfaces/: event_classifier.py  knowledge_graph.py  market_data.py  news_source.py  repository.py  similarity_engine.py  stakeholder_provider.py
backend/app/domain/models/: attribution.py  causal_chain.py  company.py  entity.py  event.py  ipo.py  lead.py  memory.py  opportunity.py  portfolio.py  prediction.py  risk.py  smart_money.py  stakeholder.py
backend/app/infrastructure/database/: db_migration.py  engine.py  repositories.py  tables.py
backend/app/infrastructure/graph/: __init__.py  graph_seed.py  memory_graph.py
backend/app/infrastructure/ingestion/: __init__.py  nse_stakeholder_provider.py  rss_source.py  scheduler.py  yfinance_provider.py
backend/app/infrastructure/ml/: finbert_classifier.py  sentence_embedder.py  spacy_extractor.py
backend/app/services/: attribution_service.py  auth_service.py  causal_chain_service.py  event_service.py  explanation_service.py  impact_service.py  ingestion_service.py  ipo_service.py  lead_service.py  learning_service.py  memory_engine.py  opportunity_service.py  portfolio_service.py  prediction_service.py  risk_service.py  smart_money_service.py  stakeholder_service.py
backend/app/utils/: errors.py  logging.py  timing.py
(+19 files in other folders)
